Remove unused requirements.

--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -2,9 +2,13 @@
 bandit
 beautifulsoup4
 black==22.3.0
+huggingface_hub
 ipykernel
 matplotlib
 mypy
+numpy
+pandas
+pyarrow
 pycodestyle
 pydocstyle
 pylint
