--- a/requirements/prod.in
+++ b/requirements/prod.in
@@ -1,5 +1,5 @@
 flask
-pytorch-lightning
 sentencepiece
+requests
 torch @ https://download.pytorch.org/whl/cu113/torch-1.12.0%2Bcu113-cp39-cp39-linux_x86_64.whl
 transformers
