--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -3,13 +3,25 @@ name: Python package
 on: [push]
 
 jobs:
-  build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.9"]
-
+    defaults:
+      run:
+        shell: bash -el {0}  # For conda env activation
+    steps:
+      - uses: actions/checkout@v2
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: swe-parl-mot-summarization
+          environment-file: environment.yml
+          python-version: 3.9
+          condarc-file: etc/example-condarc.yml
+          auto-activate-base: false
+      - run: |
+          conda info
+          conda list
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
