--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -3,13 +3,16 @@ name: Python package
 on: [push]
 
 jobs:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.9"]
+
     defaults:
       run:
-        shell: bash -el {0}  # For conda env activation
+        shell: bash -el {0} # For conda env activation
+
     steps:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
