--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -32,8 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip-sync requirements/prod.txt requirements/dev.txt
       - name: Lint with ruff
         run: |
           # stop the build if there are Python syntax errors or undefined names
