--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -33,12 +33,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip-sync requirements/prod.txt requirements/dev.txt
-      - name: Lint with ruff
+      - name: Lint
         run: |
-          # stop the build if there are Python syntax errors or undefined names
-          ruff --format=github --select=E9,F63,F7,F82 --target-version=py37 .
-          # default set of ruff rules with GitHub Annotations
-          ruff --format=github --target-version=py37 .
+          bash scripts/lint.sh
       - name: Test with pytest
         run: |
-          pytest
+          bash scripts/test.sh
