--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -35,7 +35,7 @@ jobs:
           pip-sync requirements/prod.txt requirements/dev.txt
       - name: Lint
         run: |
-          bash scripts/lint.sh
+          bash tasks/lint.sh
       - name: Test with pytest
         run: |
-          bash scripts/test.sh
+          bash tasks/test.sh
