--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ max-line-length = 88
 
 [pydocstyle]
 convention = numpy
-#add-ignore = D100,D102,D103,D104,D105,D200,D205,D400
+add-ignore = D100,D102,D104
 
 [mypy]
 #ignore_missing_imports = True
