Update pydocstyle exceptions.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,9 @@
 [pycodestyle]
 max-line-length = 88
-#ignore = E203,E402,E501,W503
 
 [pydocstyle]
 convention = numpy
-add-ignore = D100,D102,D104
+add-ignore = D100,D102,D104,D200,D205,D400
 
 [mypy]
 #ignore_missing_imports = True
