--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ convention = numpy
 add-ignore = D100,D102,D104,D200,D205,D400
 
 [mypy]
-#ignore_missing_imports = True
+install_types = True
 
 [tool:pytest]
 #addopts = --doctest-modules
