--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ add-ignore = D100,D102,D104,D200,D205,D400
 
 [mypy]
 install_types = True
+ignore_missing_imports = True
 
 [tool:pytest]
 #addopts = --doctest-modules
