--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,21 @@ add-ignore = D100,D102,D104,D200,D205,D400
 
 [mypy]
 install_types = True
+non_interactive = True
+
+[mypy-bs4]
+ignore_missing_imports = True
+
+[mypy-huggingface_hub]
+ignore_missing_imports = True
+
+[mypy-lightning.*]
+ignore_missing_imports = True
+
+[mypy-pandas]
+ignore_missing_imports = True
+
+[mypy-transformers.*]
 ignore_missing_imports = True
 
 [tool:pytest]
