--- a/setup.cfg
+++ b/setup.cfg
@@ -24,5 +24,8 @@ ignore_missing_imports = True
 [mypy-transformers.*]
 ignore_missing_imports = True
 
+[mypy-tqdm]
+ignore_missing_imports = True
+
 [tool:pytest]
 #addopts = --doctest-modules
