--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -38,4 +38,4 @@ jobs:
           bash tasks/lint.sh
       - name: Test with pytest
         run: |
-          pytest -s .
+          PYTHONPATH=. pytest -s .
