--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: swe-parl-mot-summarization
+          activate-environment: swe-motion-env
           environment-file: environment.yml
           python-version: 3.9
           auto-activate-base: false
